--- a/Assets/_Projects/UI/USS/GameView.uss
+++ b/Assets/_Projects/UI/USS/GameView.uss
@@ -22,6 +22,13 @@
     -unity-font-style: bold;
 }
 
+.pending-points-label {
+    font-size: 24px;
+    color: rgb(144, 238, 144);
+    -unity-font-style: bold;
+    margin-top: 5px;
+}
+
 /* ゲームエリア（3D表示用、透明） */
 .game-area {
     flex-grow: 1;
